shiny-server 1.5.7
--------------------------------------------------------------------------------

* Support gzip/deflate compression for HTTP responses. You can disable this if
  necessary with the directive "http_allow_compression no;" at the top level
  of shiny-server.conf.

shiny-server 1.5.6
--------------------------------------------------------------------------------

* Use HTTPS for Google Fonts on error page, which resolves insecure content errors on some browser when run behind SSL.
  (PR #322)

shiny-server 1.5.5
--------------------------------------------------------------------------------

There were no changes in this release. The version was increased just to match Shiny Server Pro.

shiny-server 1.5.4
--------------------------------------------------------------------------------

* Upgrade to Node.js v6.10.3.

* Upgrade to pandoc 1.19.2.1.

* Refactor scheduler code to make enforcement of connection limits more robust.

* Add opt-in clickjacking protection via `frame_options` directive.

* Fix "Error: Can't set headers after they are sent." appearing in the log.

shiny-server 1.5.3
--------------------------------------------------------------------------------

* Upgrade to Node.js v6.10.0.

shiny-server 1.5.2
--------------------------------------------------------------------------------

* Add additional configuration directives `http_keepalive_timeout`,
  `sockjs_heartbeat_delay`, and `sockjs_disconnect_delay` to allow working
  with very slow connections and large SockJS payloads. (The default values
  for these options are the same as in previous versions of Shiny Server.)

shiny-server 1.5.1
--------------------------------------------------------------------------------

* Improve robustness with unfriendly proxy configurations. This had regressed
  some time between 1.4.3 and 1.4.7. (PR #263)

shiny-server 1.5.0
--------------------------------------------------------------------------------
